--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -1,3 +1,14 @@
 .hero-bg {
   background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
 }
+
+.button {
+  &--end {
+    margin: .5rem;
+  }
+  &--start {
+    margin-top: .5rem;
+    margin-right: .5rem;
+    margin-bottom: .5rem;
+  }
+}
