--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -1,11 +1,13 @@
 .hero-bg {
-  background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
+  // background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
+  background-image: radial-gradient(circle 400px at center, #16d9e3 10%, #30c7ec 47%, #46aef7 100%);
 }
 
 .button {
   &--end {
     margin: .5rem;
   }
+
   &--start {
     margin-top: .5rem;
     margin-right: .5rem;
