--- a/src/scss/_bulma.scss
+++ b/src/scss/_bulma.scss
@@ -1,8 +1,47 @@
 @charset "utf-8";
 /*! bulma.io v0.5.3 | MIT License | github.com/jgthms/bulma */
+// UTILITIES AND BASE
 @import "./../../node_modules/bulma/sass/utilities/all";
 @import "./../../node_modules/bulma/sass/base/all";
-@import "./../../node_modules/bulma/sass/elements/all";
-@import "./../../node_modules/bulma/sass/components/all";
-@import "./../../node_modules/bulma/sass/grid/all";
+
+// ELEMENTS
+// @import "./../../node_modules/bulma/sass/elements/all";
+// @import "./../../node_modules/bulma/sass/elements/box";
+@import "./../../node_modules/bulma/sass/elements/button";
+@import "./../../node_modules/bulma/sass/elements/container";
+@import "./../../node_modules/bulma/sass/elements/content";
+@import "./../../node_modules/bulma/sass/elements/form";
+@import "./../../node_modules/bulma/sass/elements/icon";
+@import "./../../node_modules/bulma/sass/elements/image";
+@import "./../../node_modules/bulma/sass/elements/notification";
+// @import "./../../node_modules/bulma/sass/elements/progress";
+// @import "./../../node_modules/bulma/sass/elements/table";
+// @import "./../../node_modules/bulma/sass/elements/tag";
+@import "./../../node_modules/bulma/sass/elements/title";
+@import "./../../node_modules/bulma/sass/elements/other";
+
+// COMPONENTS
+// @import "./../../node_modules/bulma/sass/components/all";
+// @import "./../../node_modules/bulma/sass/components/breadcrumb";
+@import "./../../node_modules/bulma/sass/components/card";
+// @import "./../../node_modules/bulma/sass/components/dropdown";
+@import "./../../node_modules/bulma/sass/components/level";
+// @import "./../../node_modules/bulma/sass/components/media";
+@import "./../../node_modules/bulma/sass/components/menu";
+// @import "./../../node_modules/bulma/sass/components/message";
+// @import "./../../node_modules/bulma/sass/components/modal";
+@import "./../../node_modules/bulma/sass/components/nav";
+@import "./../../node_modules/bulma/sass/components/navbar";
+// @import "./../../node_modules/bulma/sass/components/pagination";
+// @import "./../../node_modules/bulma/sass/components/panel";
+// @import "./../../node_modules/bulma/sass/components/tabs";
+
+// GRID
+// @import "./../../node_modules/bulma/sass/grid/all";
+@import "./../../node_modules/bulma/sass/grid/columns";
+// @import "./../../node_modules/bulma/sass/grid/tiles";
+// LAYOUT
 @import "./../../node_modules/bulma/sass/layout/all";
+// @import "./../../node_modules/bulma/sass/layout/hero";
+// @import "./../../node_modules/bulma/sass/layout/section";
+// @import "./../../node_modules/bulma/sass/layout/footer";
