.img-hover => .hover-shadow, + links on project images

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -39,9 +39,9 @@
   margin-top: 1.2rem;
 }
 
-.img-hover {
+.hover-shadow {
   &:hover {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
   }
 }
 
