--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -39,9 +39,15 @@
   margin-top: 1.2rem;
 }
 
-.hover-shadow {
+.img-shadow {
   &:hover {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+  }
+}
+
+.button-shadow {
+  &:hover {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
   }
 }
 
